fix: wrong background-color in autocomplete

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -332,7 +332,7 @@ $max-safe-integer: 2147483647;
 		width: fit-content;
 
 		.autocomplete-dropdown {
-			background-color: rgb(0 169 0 / 1.0);
+			background-color: rgb(0 255 2 / 1.0);
 			border-radius: 3px;
 			top: 0;
 			font-family: $font-stack;
